# COVIDINC

./: ButtonInit.cpp  CMakeLists.txt  DataFrame.cpp  DataFrame.h  ErrorFox.cpp  ErrorFox.h  GUI.cpp  Game.hpp  GraphicsDependicies.h  HUD.cpp  MapInit.cpp  Menu.hpp  MenuInit.cpp  README.md  SEIRD.h  SIR_model.cpp  SIR_model.h  Simulation.hpp  Trigonometry.cpp  Trigonometry.h  example.csv  main.cpp  out  sir_out.csv  sir_output.csv  sir_output2.csv
source/: ncovConfirmed.csv  ncovRecovered.csv  ncovTotal.csv  russia.csv
source/countries/: part1.csv  part2.csv
source/datasets/2019_nCov_3/: cases - confirmed - jhu.csv  cases - deaths - jhu.csv  cases - recovered - jhu.csv  confirmed cases - chinese provinces - who.csv  time_series_2019-ncov-Confirmed.csv
source/datasets/Tuberculosis_pattern/: tubercolusis_from 2007_WHO.csv  tuberculosis_data_WHO.csv
source/sprites/: map_mask.xcf
source/sprites/map/: try1.xcf
updateLogs/: updateLog-21-03-20.md  updateLog-22-03-20.md
